5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1643_2704.log
== SUBMITION (2019-04-12 13:35:32) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.uper()==s):
	print(nota*1.1)
else (bonus.uper==n)
    print(nota)
-- EXECUTION TIME:
0.188004
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 5
    else (bonus.uper==n)
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:36:12) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.uper()==s):
	print(round(nota*1.1,1)
else (bonus.uper==n)
    print(round(nota,1))
-- EXECUTION TIME:
0.148532
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 5
    else (bonus.uper==n)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:36:29) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.uper()==S):
	print(round(nota*1.1,1)
else (bonus.uper==N)
    print(round(nota,1))
-- EXECUTION TIME:
0.210848
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 5
    else (bonus.uper==N)
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:36:32) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.uper()==S):
	print(round(nota*1.1,1)
else (bonus.uper==N)
    print(round(nota,1))
-- ERROR:
File "XXXX", line 5
    else (bonus.uper==N)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:37:23) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.uper()==S):
	print(round(nota*1.1,1)
else (bonus.uper==N):
    print(round(nota,1))
-- EXECUTION TIME:
0.138763
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 5
    else (bonus.uper==N):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:37:29) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.uper()==S):
	print(round(nota*1.1,1)
else (bonus.uper==N):
    print(round(nota,1))
-- ERROR:
File "XXXX", line 5
    else (bonus.uper==N):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:37:31) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.uper()==S):
	print(round(nota*1.1,1)
else (bonus.uper==N):
    print(round(nota,1))
-- EXECUTION TIME:
0.128434
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 5
    else (bonus.uper==N):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:37:31) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.uper()==S):
	print(round(nota*1.1,1)
else (bonus.uper==N):
    print(round(nota,1))
-- EXECUTION TIME:
0.187542
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 5
    else (bonus.uper==N):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:39:20) 
-- CODE:
nota=float(input())
bonus=input(.upper())
if (bonus=="S"):
	print(nota*1.1)
else (bonus.uper=='N'):
    print(nota)
-- EXECUTION TIME:
0.153189
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 2
    bonus=input(.upper())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:39:21) 
-- CODE:
nota=float(input())
bonus=input(.upper())
if (bonus=="S"):
	print(nota*1.1)
else (bonus.uper=='N'):
    print(nota)
-- ERROR:
File "XXXX", line 2
    bonus=input(.upper())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:39:29) 
-- CODE:
nota=float(input())
bonus=input(.upper())
if (bonus=="S"):
	print(nota*1.1)
else (bonus.uper=='N'):
    print(nota)
-- EXECUTION TIME:
0.173092
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 2
    bonus=input(.upper())
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:40:13) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.upper=="S"):
	print(nota*1.1)
else (bonus.uper=='N'):
    print(nota)
-- EXECUTION TIME:
0.141701
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 5
    else (bonus.uper=='N'):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:40:14) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.upper=="S"):
	print(nota*1.1)
else (bonus.uper=='N'):
    print(nota)
-- ERROR:
File "XXXX", line 5
    else (bonus.uper=='N'):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:42:44) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.upper=="S"):
	print(nota*1.1)
else:
    print(nota)
-- EXECUTION TIME:
0.197416
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:43:02) 
-- CODE:
nota=float(input())
bonus=input()
if (bonus.upper()=="S"):
	print(nota*1.1)
else:
    print(nota)
-- EXECUTION TIME:
0.211312
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
